[gd_scene load_steps=7 format=3 uid="uid://rgj82y1j3a6o"]

[ext_resource type="Texture2D" uid="uid://tw8t38ns0seh" path="res://icon.svg" id="1_6ixc6"]
[ext_resource type="Script" path="res://scenes/units/zombie.gd" id="1_m41g3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_6dea2"]
radius = 80.025

[sub_resource type="CircleShape2D" id="CircleShape2D_xmo00"]
resource_local_to_scene = true
radius = 133.06

[sub_resource type="CircleShape2D" id="CircleShape2D_n7l6q"]
resource_local_to_scene = true
radius = 567.631

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_5tmn3"]
properties/0/path = NodePath(".:health")
properties/0/spawn = true
properties/0/replication_mode = 2
properties/1/path = NodePath(".:dead")
properties/1/spawn = true
properties/1/replication_mode = 2

[node name="Zombie" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 3
script = ExtResource("1_m41g3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_6dea2")

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CircleShape2D_xmo00")

[node name="Detection_Area" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection_Area"]
shape = SubResource("CircleShape2D_n7l6q")

[node name="HealthBar" type="ProgressBar" parent="."]
modulate = Color(0, 0.571432, 0.119826, 1)
light_mask = 3
visibility_layer = 3
offset_left = -111.0
offset_top = -109.0
offset_right = 111.0
offset_bottom = -82.0
show_percentage = false

[node name="Attack_Cooldown" type="Timer" parent="."]
one_shot = true

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_5tmn3")

[node name="Graphics" type="Node2D" parent="."]

[node name="Alive" type="Sprite2D" parent="Graphics"]
texture = ExtResource("1_6ixc6")

[node name="Dead" type="Sprite2D" parent="Graphics"]
z_index = -1
texture = ExtResource("1_6ixc6")

[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_exited" from="Hitbox" to="." method="_on_hitbox_body_exited"]
[connection signal="body_entered" from="Detection_Area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="Detection_Area" to="." method="_on_detection_area_body_exited"]
